--- a/client/views/app/archiving/area_list/view.html
+++ b/client/views/app/archiving/area_list/view.html
@@ -1,7 +1,7 @@
 <template name="areaList">
   <div class="list-group">
-    {{#each state$areas}}
-      {{>render component="areaArchiveItem" area=this}}
+    {{#each areas}}
+      {{> areaArchiveItem area=this}}
     {{/each}}
   </div>
 </template>
