--- a/client/views/app/archiving/view.html
+++ b/client/views/app/archiving/view.html
@@ -1,12 +1,12 @@
 <template name="locationAreaArchiving">
   <div class="panel-body">
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-      {{#each state$locations}}
+    <div class="panel-group" role="tablist" aria-multiselectable="true">
+      {{#each locations}}
         <div class="panel panel-default">
-          {{>render component="locationItem" location=this}}
+          {{> locationItem location=this}}
           <div id="body-{{_id}}" class="panel-collapse collapse" role="tabpanel"
                aria-labelledby="heading-{{_id}}">
-            {{>render component="areaList" locationId=_id}}
+            {{> areaList locationId=_id}}
           </div>
         </div>
       {{/each}}
