--- a/client/views/app/stocktake/counting-view/counting-view-items/list/list-item/counting-view-list-item.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/list-item/counting-view-list-item.html
@@ -1,6 +1,6 @@
 <template name="stockCountingListItem">
   {{#if item}}
-    <li class="list-group-item" data-place="{{item.place}}">
+    <li class="list-group-item">
       {{#if editable}}
         <i class="fa fa-fw fa-reorder"></i>
       {{/if}}
