--- a/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
@@ -10,7 +10,7 @@
        data-toggle="collapse" href="#{{item._id}}"
        aria-expanded="false" aria-controls="{{item._id}}">
       {{#if editable}}
-        <a href="#" class="{{item.type}}" data-id="{{item._id}}">{{item.name}}</a>
+        <a href="#" class="{{item.type}}">{{item.name}}</a>
       {{else}}
         {{item.name}}
       {{/if}}
