--- a/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-filters.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-filters.html
@@ -1,21 +1,11 @@
 <template name="areaFilters">
   <div class="col-md-4 no-margin areaFilering">
     {{#each generalAreas}}
-      {{> areaBox item=this
-                  class="garea-filter"
-                  name="garea"
-                  stockTakeData=stockTakeData
-                  makeGeneralAreaActive=makeGeneralAreaActive
-                  makeSpecialAreaActive=makeSpecialAreaActive}}
+      {{> areaBox item=this class="garea-filter" name="garea" stockTakeData=stockTakeData}}
       <div class="collapse" id="{{this._id}}">
         <div class="well">
           {{#each specialAreas this._id}}
-            {{> areaBox item=this
-                        class="sarea-filter"
-                        name="sarea"
-                        stockTakeData=stockTakeData
-                        makeGeneralAreaActive=makeGeneralAreaActive
-                        makeSpecialAreaActive=makeSpecialAreaActive}}
+            {{> areaBox item=this class="sarea-filter" name="sarea" stockTakeData=stockTakeData}}
           {{else}}
             No Special Areas
             <br>
