--- a/client/views/app/stocktake/counting-view/counting-view-items/list/counting-view-list.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/counting-view-list.html
@@ -18,16 +18,13 @@
   </div>
   
   <div class="row">
-    {{> areaFilters stockTakeData=stockTakeCountingContext
-                    makeSpecialAreaActive=makeSpecialAreaActive
-                    makeGeneralAreaActive=makeGeneralAreaActive}}
+    {{> areaFilters stockTakeData=stockTakeCountingContext}}
     {{#if filtered}}
       <div class="col-md-8">
         {{#if notTemplate}}
           <ul class="list-group sortableStockItems">
             {{#each stocktakeList}}
-              {{> stockCountingListItem item=this
-                                        stockTakeData=stockTakeCountingContext}}
+              {{> stockCountingListItem item=this stockTakeData=stockTakeCountingContext}}
             {{else}}
               No items on this list
             {{/each}}
@@ -35,8 +32,7 @@
         {{else}}
           <ul class="list-group sortableStockItems">
             {{#each ingredientsList}}
-              {{> stockCountingListItem item=this
-                                        stockTakeData=stockTakeCountingContext}}
+              {{> stockCountingListItem item=this stockTakeData=stockTakeCountingContext}}
             {{else}}
               No items on this list
             {{/each}}
