Fixed ingredient item editor modal in supplier details

--- a/client/views/app/suppliers/supplier-profile/products/procucts-list.html
+++ b/client/views/app/suppliers/supplier-profile/products/procucts-list.html
@@ -21,7 +21,7 @@
   </div>
   <!-- EDIT INGREDIENT-->
   {{#if canViewStock}}
-      {{> ingredientItemEditor isModal=true ingredient=state$ingredient}}
+    <div id="ingredientItemEditorPlaceHolder"></div>
   {{/if}}
   <!-- /EDIT INGREDIENT -->
 </template>
