--- a/client/views/app/archiving/area_list/area_archive_item/view.html
+++ b/client/views/app/archiving/area_list/area_archive_item/view.html
@@ -3,9 +3,11 @@
     <li class="list-group-item">
       {{name}}
       {{#unless isCurrentArea this._id}}
-        {{#with btnSettings this.archived}}
-          <button class="btn btn-xs {{btnClass}} pull-right archive-loc-btn">{{text}}</button>
-        {{/with}}
+        {{#if this.archived}}
+          <button class="btn btn-xs btn-danger pull-right archive-area-btn">unarchive</button>
+          {{else}}
+          <button class="btn btn-xs btn-default pull-right archive-area-btn">archive</button>
+        {{/if}}
       {{/unless}}
     </li>
   {{/with}}
