--- a/client/views/app/archiving/location_item/view.html
+++ b/client/views/app/archiving/location_item/view.html
@@ -7,10 +7,12 @@
            aria-expanded="false" aria-controls="body-{{_id}}">
           {{name}}
         </a>
-        {{#unless isCurrentLocation this._id}}
-          {{#with btnSettings this.archived}}
-            <button class="btn btn-xs {{btnClass}} pull-right archive-loc-btn">{{text}}</button>
-          {{/with}}
+        {{#unless isCurrentLocation _id}}
+          {{#if archived}}
+            <button class="btn btn-xs btn-danger pull-right archive-loc-btn">unarchive</button>
+          {{else}}
+            <button class="btn btn-xs btn-default pull-right archive-loc-btn">archive</button>
+          {{/if}}
         {{/unless}}
       </h4>
     </div>
