Back to reactivity

--- a/client/views/app/suppliers/supplier-profile/products/procucts-list.html
+++ b/client/views/app/suppliers/supplier-profile/products/procucts-list.html
@@ -12,7 +12,7 @@
       </thead>
       <tbody>
       {{#each products}}
-        {{> productItem item=this}}
+        {{> productItem ingredientId=_id}}
       {{else}}
         No products
       {{/each}}
