--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
@@ -13,10 +13,7 @@
           </div>
           <div class="row">
             <div class="col-xs-9">
-              <div class="date-picker input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input class="set-due-date form-control" type="text"/>
-              </div>
+              {{> unavailabiliiesDatepicker datepickerClass='date-picker'}}
             </div>
             <div class="col-xs-3">
               <div class="col-xs-6">
