--- a/client/views/app/job-items/detail/details-header/job-items-details-header.html
+++ b/client/views/app/job-items/detail/details-header/job-items-details-header.html
@@ -1,6 +1,6 @@
 <template name="jobDetailsHeader">
   <div class="title-action">
-    <button class="btn btn-primary hidden-print editJobItemBtn">
+    <button class="btn btn-primary hidden-print edit-job-item">
       <i class="fa fa-edit"></i>
       Edit Job
     </button>
@@ -14,24 +14,24 @@
       <ul class="dropdown-menu" style="margin-left: -56px;">
         <li>
           {{#if isSubscribed}}
-            <a href="#" class="hidden-print subscribeButton">
+            <a href="#" class="hidden-print unsubscribe-button">
               <i class="fa fa-lg fa-rss text-info"></i> Unsubscribe
             </a>
           {{else}}
-            <a href="#" class="hidden-print subscribeButton">
+            <a href="#" class="hidden-print subscribe-button">
               <i class="fa fa-lg fa-rss text-muted"></i> Subscribe
             </a>
           {{/if}}
         </li>
         {{#if canEditJob}}
           <li>
-            <a href="" class="hidden-print copyJobItemBtn">
+            <a href="" class="hidden-print copy-job-item-button">
               <i class="fa fa-copy"></i> Copy
             </a>
           </li>
         {{/if}}
         <li>
-          <a href="" class="hidden-print printJobItemBtn">
+          <a href="" class="hidden-print print-job-item-button">
             <i class="fa fa-print"></i> Print
           </a>
         </li>
@@ -39,20 +39,20 @@
           <li role="separator" class="divider"></li>
           {{#if isArchived}}
             <li>
-              <a href="#" class="hidden-print archiveJobItem">
+              <a href="#" class="hidden-print archive-job-item">
                 <i class="fa fa-dropbox"></i>
                 Restore
               </a>
             </li>
             <li>
-              <a href="#" class="hidden-print deleteJobItem">
+              <a href="#" class="hidden-print delete-job-item">
                 <i class="fa fa-trash-o"></i>
                 Delete
               </a>
             </li>
           {{else}}
             <li>
-              <a href="#" class="hidden-print archiveJobItem">
+              <a href="#" class="hidden-print archive-job-item">
                 <i class="fa fa-archive"></i>
                 Archive
               </a>
