--- a/client/views/app/job-items/detail/job-items-detail.html
+++ b/client/views/app/job-items/detail/job-items-detail.html
@@ -1,6 +1,6 @@
 <template name="jobItemDetail">
   <!-- Page heading -->
-  {{> pageHeading title=jobItem.name category="Jobs" id=jobItem.id name="jobitemdetailed"}}
+  {{> pageHeading title=jobItem.name category="Jobs" id=jobItem._id name="jobitemdetailed"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
