Fixed some small bugs

--- a/client/views/app/user-unavailabilities/unavailabilities-datepicker/unavailabilities-datepicker.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-datepicker/unavailabilities-datepicker.html
@@ -1,6 +1,6 @@
 <template name="unavailabiliiesDatepicker">
   <div class="{{datepickerClass}} input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-    <input class="form-control" type="button"/>
+    <input class="form-control open-datetimepicker" type="button"/>
   </div>
 </template>
