Fix multiple design issues

--- a/client/views/app/menu-items/submit/submit-menu-item.html
+++ b/client/views/app/menu-items/submit/submit-menu-item.html
@@ -54,7 +54,7 @@
 
               <div class="form-group">
                 <label class="col-sm-2 control-label">Ingredients used</label>
-                {{> listOfIngredients ingredients=state$menuItemIngredients onChange=getOnIngredientsListChanged}}
+                {{> listOfIngredients isMenu=true ingredients=state$menuItemIngredients onChange=getOnIngredientsListChanged}}
               </div>
 
               <div class="form-group">
