--- a/client/views/app/menu-items/submit/job-list/job-list.html
+++ b/client/views/app/menu-items/submit/job-list/job-list.html
@@ -1,26 +1,29 @@
 <template name="menuItemJobsList">
   <div class="col-sm-10">
-    <table class="table table-hover thumbnail">
-      <thead>
-      <tr>
-        <th>Name</th>
-        <th>Cost per Portion ($)</th>
-        <th>Portions</th>
-      </tr>
-      </thead>
-      <tbody>
-      {{#each jobs}}
-        {{> menuItemJobsListItem jobEntry}}
-      {{/each}}
-      </tbody>
-    </table>
+    <div class="job-list-wrapper thumbnail">
+      <table class="table table-hover">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Cost per Portion ($)</th>
+          <th>Portions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {{#each jobs}}
+          {{> menuItemJobsListItem jobEntry}}
+        {{/each}}
+        </tbody>
+      </table>
 
-    <button id="showJobItemsList" class="btn btn-block btn-outline btn-primary" type="button">
-      <i class="fa fa-plus"></i> Add prep jobs to menu item
-    </button>
+      <button class="btn btn-block btn-outline btn-primary" type="button" data-toggle="modal"
+              data-target="#addJobItemModal">
+        <i class="fa fa-plus"></i> Add prep jobs to menu item
+      </button>
+    </div>
   </div>
 
   <!-- JOB ITEMS LIST-->
-    {{> jobItemsModalList idsToExclude=alreadyAddedJobItemsIds onItemsAdded=getOnJobItemsAdded}}
+  {{> addJobItemModal idsToExclude=alreadyAddedJobItemsIds onItemsAdded=getOnJobItemsAdded}}
   <!-- /JOB ITEMS LIST -->
 </template>
