--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
@@ -28,14 +28,7 @@
 
         <!-- Time -->
         <div class="form-group col-xs-12 {{state$timePickerVisibility}}">
-          <div class="start-time-picker input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-            <input class="set-due-date form-control" type="text"/>
-          </div>
-          <div class="end-time-picker input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-            <input class="set-due-date form-control" type="text"/>
-          </div>
+          {{> comboTimeEditable params=timeComboEditableParams}}
         </div>
 
         <!-- Repeats -->
