Fix jobItem copying

--- a/client/views/app/job-items/detail/ingredients-view/job-items-ingredients-view.html
+++ b/client/views/app/job-items/detail/ingredients-view/job-items-ingredients-view.html
@@ -1,7 +1,7 @@
 <template name="ingredientItemView">
   <tr>
-    <td>{{quantity}} {{ingredientItem.portionUsed}}</td>
-    <td>{{ingredientItem.description}}</td>
+    <td>{{quantity}} {{ingredient.portionUsed}}</td>
+    <td>{{ingredient.description}}</td>
     <td>$ {{cost}}</td>
   </tr>
 </template>
