--- a/client/views/app/common/text-editor/text-editor.html
+++ b/client/views/app/common/text-editor/text-editor.html
@@ -1,4 +1,6 @@
 <template name="textEditor">
-  <div class="summernote">
+  <div class="text-editor-wrapper">
+    <div class="summernote">
+    </div>
   </div>
 </template>
