--- a/client/views/app/job-items/ingredients-list/edit/ingredient-item-edit.html
+++ b/client/views/app/job-items/ingredients-list/edit/ingredient-item-edit.html
@@ -3,7 +3,7 @@
     <td>{{item.code}}</td>
     <td>{{item.description}}</td>
     <td>{{item.portionUsed}}</td>
-    <td>$ {{unitPrice}}</td>
+    <td>${{ingredientStatistics.costPerPortionUsed}}</td>
     <td><input value="{{quantity}}" class="ing-qty" type="text"/></td>
     <td>
       <a href="">
