--- a/client/views/app/menu-items/submit/job-list/job-list.html
+++ b/client/views/app/menu-items/submit/job-list/job-list.html
@@ -18,7 +18,7 @@
 
       <button class="btn btn-block btn-outline btn-primary" type="button" data-toggle="modal"
               data-target="#addJobItemModal">
-        <i class="fa fa-plus"></i> Add prep jobs to menu item
+        <i class="fa fa-plus"></i> Add prep jobs
       </button>
     </div>
   </div>
