Fixed add prep stock button

--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -53,7 +53,7 @@
           </tbody>
         </table>
         {{#if canEditMenu}}
-          <a class="btn btn-primary" href="#showListOfIngs" data-toggle="modal">Add prep or stock</a>
+          <a class="btn btn-primary" href="#addPrepStockModal" data-toggle="modal">Add prep or stock</a>
         {{/if}}
       </div>
       {{> menuDetailWidgets}}
