Applied new modal manager API to ingredient item editor modal

--- a/client/views/app/common/ingredient-item-editor/editor-buttons/editor-buttons.html
+++ b/client/views/app/common/ingredient-item-editor/editor-buttons/editor-buttons.html
@@ -12,10 +12,5 @@
     <button class="btn btn-primary submit-ingredient-button">Add ingredient</button>
   {{/if}}
 
-  {{#if isModal}}
-    <button class="btn btn-default" data-dismiss="modal">Close</button>
-  {{else}}
-    <!-- ingredient-editor-cancel may be used to provide custom actions on cancel action -->
-    <button class="btn btn-default ingredient-editor-cancel">Cancel</button>
-  {{/if}}
+  <button class="btn btn-default close-modal-button">Close</button>
 </template>
