refactoring some code after review

--- a/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
@@ -1,5 +1,5 @@
 <template name="areaBox">
-  <div class="areaBox" data-id="{{item._id}}">
+  <div class="areaBox">
     {{#if editable}}
       <div class="box-wrapper pull-right" style="display: none;">
         <span class="box-remove glyphicon glyphicon-remove removeArea" style="margin: 2px"></span>
