Fixed add job items modal

--- a/client/views/app/menu-items/submit/job-list/add-job-item-modal/add-job-item-modal.html
+++ b/client/views/app/menu-items/submit/job-list/add-job-item-modal/add-job-item-modal.html
@@ -25,7 +25,7 @@
                 </thead>
                 <tbody>
                 {{#each availableJobItems}}
-                  {{> jobItemsModalListItem item=this onSelectionStateChanged=getOnSelectionStateChanged isSelected=isJobItemSelected}}
+                  {{> jobItemsModalListItem item=this onJobItemSelect=onJobItemSelect}}
                 {{/each}}
                 </tbody>
               </table>
