--- a/client/views/app/menu-items/submit/submit-menu-item.html
+++ b/client/views/app/menu-items/submit/submit-menu-item.html
@@ -52,7 +52,7 @@
 
               <div class="form-group">
                 <label class="col-sm-2 control-label">Prep items used</label>
-                {{> menuItemJobsList jobs=state$menuItemJobs onChange=getOnJobItemsListChanged}}
+                {{> menuItemJobsList jobItems=state$menuItemJobs onChange=getOnJobItemsListChanged}}
               </div>
 
               <div class="form-group">
