Fixed menu items copying

--- a/client/views/app/menu-items/details/header/menu-details-header.html
+++ b/client/views/app/menu-items/details/header/menu-details-header.html
@@ -57,7 +57,7 @@
     <!--AREA CHOOSER-->
     <div class="modal fade" id="areaChooser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
-      {{> areaChooser onAreaSelected=state$onAreaSelected}}
+      {{> areaChooser onAreaSelected=onAreaSelected}}
     </div>
     <!--AREA CHOOSER-->
   {{/if}}
