Design imporvement in menu item's settings

--- a/client/views/app/menu-items/details/settings/settings.html
+++ b/client/views/app/menu-items/details/settings/settings.html
@@ -31,9 +31,9 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">Image</label>
 
-      <div class="col-sm-9">
+      <div class="col-sm-9 pull-right">
         <div class="menuImageDiv">
-          <div class="file uploadedImageDiv">
+          <div class="uploadedImageDiv">
             {{#if image}}
               <a href="#">
                 <span class="corner"></span>
