Fixed select ingredients and jobitems modal

--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -63,6 +63,6 @@
   </div>
 
   <!-- SHOW LIST OF INGS AND PREPS -->
-  {{> addPrepStockModal}}
+  {{> addPrepStockModal jobItems=jobItems ingredients=ingredients}}
   <!-- /SHOW LIST OF INGS AND PREPS -->
 </template>
