Fixed checkboxes in modal windows

--- a/client/views/app/stock/modal-list/stock-item/modal-list-stock-item.html
+++ b/client/views/app/stock/modal-list/stock-item/modal-list-stock-item.html
@@ -7,8 +7,8 @@
         </label>
       </div>
     </td>
-    <td>{{stockItem.code}}</td>
-    <td>{{stockItem.description}}</td>
+    <td>{{{stockItem.code}}}</td>
+    <td>{{{stockItem.description}}}</td>
     <td>{{supplierName stockItem.suppliers}}</td>
     <td>{{stockItem.portionUsed}}</td>
     <td>${{costPerPortionUsed}}</td>
