--- a/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
+++ b/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
@@ -37,7 +37,7 @@
             </thead>
             <tbody>
             {{#each receipts}}
-              {{> orderReceiptItem item=this}}
+              {{> orderReceiptItem}}
             {{else}}
               No entries to show
             {{/each}}
