--- a/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/select-pos/select-pos.html
+++ b/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/select-pos/select-pos.html
@@ -3,7 +3,7 @@
     <div class="select-wrapper">
       <select class="selectPosName form-control">
         {{#each allPos}}
-          <option>{{name}}</option>
+          <option value="{{_id}}">{{name}}</option>
         {{/each}}
       </select>
     </div>
