--- a/client/views/app/stocktake/stocktake-ordering/email/email.html
+++ b/client/views/app/stocktake/stocktake-ordering/email/email.html
@@ -1,18 +1,17 @@
-<template name="composeMail">
-  <div class="modal fade" id="composeMailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<template name="composeStocktakeOrderingEmail">
+  <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="composeStocktakeOrderingEmail"
        aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content" style="width: 130%">
-      <div class="modal-header">
-        <button type="btn btn-danger btn-sm" class="close" data-dismiss="modal">
-          <span aria-hidden="true">&times;</span>
-          <span class="sr-only">Discard</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Compose mail</h4>
-      </div>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close btn btn-danger btn-sm close-modal-button">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Discard</span>
+          </button>
+          <h4 class="modal-title">Compose mail</h4>
+        </div>
 
-      <div class="modal-body">
-        <div>
+        <div class="modal-body">
           <form class="form-horizontal">
             <div class="form-group">
               <label class="col-sm-2 control-label">To:</label>
@@ -22,10 +21,10 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label emailTitle">Subject:</label>
+              <label class="col-sm-2 control-label">Subject:</label>
 
               <div class="col-sm-10">
-                <input type="text" class="form-control" value="{{subject}}">
+                <input type="text" class="form-control emailSubject" value="{{subject}}">
               </div>
             </div>
             <div class="form-group">
@@ -36,24 +35,21 @@
               </div>
             </div>
           </form>
-          <br>
+          <div class="clearfix"></div>
+          {{> textEditor initialHtml=initialHtml}}
+        </div>
 
-          <div class="clearfix"></div>
-            {{> textEditor initialHtml=initialHtml}}
-          <div class="mail-body text-right tooltip-demo">
-            <a href="#" class="btn btn-white btn-sm" data-dismiss="modal" data-toggle="tooltip" data-placement="top"
-               title="Discard email">
-              <i class="fa fa-times"></i> Discard
-            </a>
-            <a href="#" class="btn btn-sm btn-primary sendEmail" data-toggle="tooltip" data-placement="top"
-               title="Send">
-              <i class="fa fa-share"></i> Send
-            </a>
-          </div>
-          <div class="clearfix"></div>
+        <div class="modal-footer text-right">
+          <a href="#" class="btn btn-white btn-sm close-modal-button" data-toggle="tooltip" data-placement="top"
+             title="Discard email">
+            <i class="fa fa-times"></i> Discard
+          </a>
+          <a href="#" class="btn btn-sm btn-primary send-email-button" data-toggle="tooltip" data-placement="top"
+             title="Send">
+            <i class="fa fa-share"></i> Send
+          </a>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </template>
