--- a/client/views/app/stocktake/counting-view/list/areas/area-filters/area-box/area-box-view/area-box.html
+++ b/client/views/app/stocktake/counting-view/list/areas/area-filters/area-box/area-box-view/area-box.html
@@ -1,19 +1,21 @@
 <template name="areaBox">
   <div class="areaBox">
-    {{#if editable}}
+    {{#if activeGeneralArea item._id}}
       <div class="box-wrapper pull-right" style="display: none;">
         <span class="box-remove glyphicon glyphicon-remove removeArea" style="margin: 2px"></span>
       </div>
     {{/if}}
-    <a class="btn btn-block {{#if activeGeneralArea item._id}} btn-info {{/if}} {{#if activeSpecialArea item._id}} btn-info {{/if}} {{#if inActiveArea item._id}} btn-default {{/if}} btn-sm {{item.class}} m-b-sm"
+    {{#if activeSpecialArea item._id}}
+      <div class="box-wrapper pull-right" style="display: none;">
+        <span class="box-remove glyphicon glyphicon-remove removeArea" style="margin: 2px"></span>
+      </div>
+    {{/if}}
+    <a class="btn btn-block {{#if activeGeneralArea item._id}} btn-info {{/if}} {{#if activeSpecialArea item._id}} btn-info {{/if}}
+      {{#if inActiveArea item._id}} btn-default {{/if}} btn-sm {{itemClass}} m-b-sm"
        role="button"
        data-toggle="collapse" href="#{{item._id}}"
        aria-expanded="false" aria-controls="{{item._id}}">
-      {{#if editable}}
-        <a href="#" class="{{item.type}}">{{item.name}}</a>
-      {{else}}
-        {{item.name}}
-      {{/if}}
+      {{item.name}}
       <div class="progress progress-mini">
         <div class="progress-bar" style="width: {{widthOfBar}}"></div>
       </div>
