--- a/client/views/app/stocktake/counting-view/list/counting-view-list.html
+++ b/client/views/app/stocktake/counting-view/list/counting-view-list.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-lg-12">
       {{#if notTemplate}}
-        <a class="btn btn-primary btn-sm pull-right" href="/stocktake/orders/{{stockTakeCountingContext.stockTakeId}}">View Orders<br></a>
+        <a class="btn btn-primary btn-sm pull-right" href="{{pathFor route='stocktakeOrdering' _id=stocktakeId}}">View Orders</a>
       {{else}}
-        <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
+        <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders</a>
         {{#if stockTakeCountingContext.editableStockTake}}
           <a class="btn btn-link btn-sm pull-right saveStockTake"><i class="fa fa-fw fa-save"></i>Save</a>
         {{else}}
@@ -12,7 +12,7 @@
             Template</a>
         {{/if}}
       {{/if}}
-      {{dateFormat stocktakeMain.stocktakeDate}}
+      {{dateFormat stockTakeMain.stocktakeDate}}
       <hr>
     </div>
   </div>
@@ -22,25 +22,26 @@
     {{#if stockTakeCountingContext.activeSpecialArea}}
       <div class="col-md-8">
         {{#if notTemplate}}
-          <ul class="list-group sortableStockItems">
+          <ul class="list-group">
             {{#each stocktakeList}}
-              {{> stockCountingListItem item=this stockTakeData=stockTakeCountingContext}}
+              {{> stockCountingListItem stocktakeItem=this stockTakeData=stockTakeCountingContext}}
             {{else}}
               No items on this list
             {{/each}}
           </ul>
         {{else}}
-          <ul class="list-group sortableStockItems">
-            {{#each ingredientsList}}
-              {{> stockCountingListItem item=this stockTakeData=stockTakeCountingContext}}
-            {{else}}
-              No items on this list
-            {{/each}}
-          </ul>
-        {{/if}}
-        
-        {{#if stockTakeCountingContext.editableStockTake}}
-          <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
+          {{#if stockTakeCountingContext.editableStockTake}}
+            {{> sortableStockItems ingredientsList=ingredientsList stockTakeData=stockTakeCountingContext}}
+            <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area</a>
+          {{else}}
+            <ul class="list-group">
+              {{#each ingredientsList}}
+                {{> stockCountingListItem ingredient=this._id stockTakeData=stockTakeCountingContext}}
+              {{else}}
+                No items on this list
+              {{/each}}
+            </ul>
+          {{/if}}
         {{/if}}
       </div>
     {{else}}
@@ -48,26 +49,20 @@
     {{/if}}
   </div>
 
-  <!-- STOCKS MODAL LIST-->
   {{#if stockTakeCountingContext.activeSpecialArea}}
   <div class="modal fade" id="stocksListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
     {{> stocksModalList name="stockModal" modalStockListParams=modalStockListParams}}
   </div>
   {{/if}}
-  <!-- /STOCKS MODAL LIST -->
 
-  <!-- ADD GENERAL AREA MODAL LIST-->
   <div class="modal fade" id="addNewGeneralAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
     {{> newAreaModal name="general"}}
   </div>
-  <!-- /ADD GENERAL AREA MODAL LIST-->
 
-  <!-- ADD SPECIAL AREA MODAL LIST-->
   <div class="modal fade" id="addNewSpecialAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
     {{> newAreaModal name="special" generalArea=stockTakeCountingContext.activeGeneralArea}}
   </div>
-  <!-- /ADD SPECIAL AREA MODAL LIST-->
 </template>
