refactored stocktake main list

--- a/client/views/app/stocktake/main-list-view/items-list/stocktake-master-list.html
+++ b/client/views/app/stocktake/main-list-view/items-list/stocktake-master-list.html
@@ -14,7 +14,7 @@
             {{#if listOfDates}}
               <tbody>
               {{#each listOfDates}}
-                {{> stocktakeItem this}}
+                {{> stocktakeItem item=this}}
               {{/each}}
               </tbody>
             {{else}}
