Fixed inputs min value

--- a/client/views/app/menu-items/submit/job-list/list-item/list-item.html
+++ b/client/views/app/menu-items/submit/job-list/list-item/list-item.html
@@ -2,7 +2,7 @@
   <tr>
     <td>{{jobItem.name}}</td>
     <td>${{jobItemStatistics.prepCostPerPortion}}</td>
-    <td><input type="number" name="job-quantity" class="job-quantity" value="{{quantity}}"/></td>
+    <td><input type="number" name="job-quantity" class="job-quantity" value="{{quantity}}" min="1"/></td>
     <td>
       <i class="fa fa-trash remove-job-item"></i>
     </td>
