--- a/client/views/app/stocktake/stocktake-header/new-stocktake-modal/new-stocktake-modal.html
+++ b/client/views/app/stocktake/stocktake-header/new-stocktake-modal/new-stocktake-modal.html
@@ -6,16 +6,13 @@
             class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel">Important..!</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" style="padding-bottom: 50px">
         <div>
-          <p>You already have a stocktake for this day. Do you want to create a new one?</p>
-          <br>
-
+          <p style="margin-bottom: 20px">You already have a stocktake for this day. Do you want to create a new one?</p>
           <div class="pull-right">
             <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
             <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest existing stocktake</button>
           </div>
-          <br><br>
         </div>
       </div>
     </div>
