Finished compose email refactoring

--- a/client/views/app/stocktake/stocktake-ordering/email/email.html
+++ b/client/views/app/stocktake/stocktake-ordering/email/email.html
@@ -36,7 +36,7 @@
             </div>
           </form>
           <div class="clearfix"></div>
-          {{> textEditor initialHtml=initialHtml}}
+          {{> textEditor initialHtml=state$initialHtml}}
         </div>
 
         <div class="modal-footer text-right">
