Fixed all ingredientItemEditor

--- a/client/views/app/stock/list-view.html
+++ b/client/views/app/stock/list-view.html
@@ -1,16 +1,10 @@
 <template name="listOfStocksMasterMainView">
   <!-- Page heading -->
-  {{> pageHeading title='Stock List' category="Stocks" name="ingredientslist" templateData=templateData}}
+  {{> pageHeading title='Stock List' category="Stocks" name="ingredientslist"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
       {{> ingredientsList onIngredientIdChange=onIngredientIdChange}}
     </div>
   </div>
-
-  <!-- INGREDIENTS EDITOR -->
-  {{#if canViewStock}}
-    <div id="ingredientItemEditorPlaceHolder"></div>
-  {{/if}}
-  <!-- /INGREDIENTS EDITOR -->
 </template>
