--- a/client/views/app/stocktake/stocktake-header/new-stocktake-modal/new-stocktake-modal.html
+++ b/client/views/app/stocktake/stocktake-header/new-stocktake-modal/new-stocktake-modal.html
@@ -1,17 +1,22 @@
 <template name="newStocktakeModal">
-  <div class="modal-dialog">
-    <div class="modal-content" style="width: 130%">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
-            class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Important..!</h4>
-      </div>
-      <div class="modal-body" style="padding-bottom: 50px">
-        <div>
-          <p style="margin-bottom: 20px">You already have a stocktake for this day. Do you want to create a new one?</p>
-          <div class="pull-right">
-            <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
-            <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest existing stocktake</button>
+  <div class="modal fade new-stocktake-modal" tabindex="-1" role="dialog" aria-labelledby="newStocktakeModal"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close close-modal-button">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Close</span>
+          </button>
+          <h4 class="modal-title" id="newStocktakeModal">Important..!</h4>
+        </div>
+        <div class="modal-body">
+          <div>
+            <p>You already have a stocktake for this day. Do you want to create a new one?</p>
+            <div class="pull-right">
+              <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
+              <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest existing stocktake</button>
+            </div>
           </div>
         </div>
       </div>
