--- a/client/views/app/stocktake/order-receive/list/receive_modal/order-receive-list-modal.html
+++ b/client/views/app/stocktake/order-receive/list/receive_modal/order-receive-list-modal.html
@@ -18,13 +18,13 @@
             {{#if isWrongPrice}}
               <p class="text-center">Enter the actual price the supplier charged you here.</p>
 
-              <form class="form-horizontal" id="priceForm">
+              <form class="form-horizontal price-form">
                 <div class="form-group">
                   <div class="col-sm-3"></div>
                   <div class="col-sm-6">
                     <div class="input-group m-b">
                       <div class="input-group-addon">$</div>
-                      <input name="price" class="form-control text-right font-20"/>
+                      <input class="form-control text-right font-20 price-input"/>
                     </div>
                   </div>
                 </div>
@@ -32,7 +32,7 @@
                 <div class="text-center m-b-md">
                   <div class="i-checks">
                     <label>
-                      <input type="checkbox" name="updateStockPrice" value="" class="selectedIng">
+                      <input type="checkbox" value="" class="selectedIng update-stock-price-input">
                     </label> Update stock item price
                     <a href="#" data-placement="top" data-toggle="popover" title="Tip"
                        data-content="This will update the price in your stocklist and all jobs & menu items. It’s an easy way to keep your costings up to date.">(?)</a>
@@ -47,11 +47,11 @@
             {{#if isWrongQuantity}}
               <p class="text-center">Do you want to update the quantity of the stock order?</p>
 
-              <form class="form-horizontal" id="quantityForm">
+              <form class="form-horizontal quantity-form">
                 <div class="form-group">
                   <div class="col-sm-3"></div>
                   <div class="col-sm-6">
-                    <input name="invoiceQuantity" class="form-control text-center font-20"/>
+                    <input class="form-control text-center font-20 invoice-quantity-input"/>
                   </div>
                 </div>
                 <div class="pull-right">
