--- a/client/views/app/common/week-selector/week-selector.html
+++ b/client/views/app/common/week-selector/week-selector.html
@@ -1,27 +1,30 @@
 <template name="weekSelector">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+  <div class="modal fade week-selector" tabindex="-1" role="dialog" aria-labelledby="weekSelector"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close close-modal-button"><span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
-        <h4 class="modal-title">Select Week</h4>
-      </div>
+          <h4 class="modal-title">Select Week</h4>
+        </div>
 
-      <div class="modal-body">
-        {{#each futureWeeks}}
-          <div class="i-checks checklist-content extra-top-margin">
-            <label>
-              <input type="radio" value="{{this}}" name="week-radio"> Week {{weekFormat this}},
-              starting {{dateFormat this}}
-            </label>
-          </div>
-        {{/each}}
-      </div>
+        <div class="modal-body">
+          {{#each futureWeeks}}
+            <div class="i-checks checklist-content extra-top-margin">
+              <label>
+                <input type="radio" value="{{this}}" name="week-radio"> Week {{weekFormat this}},
+                starting {{dateFormat this}}
+              </label>
+            </div>
+          {{/each}}
+        </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary saveShifts" data-dismiss="modal">Save shifts to selected week
-        </button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary saveShifts">Save shifts to selected week
+          </button>
+          <button type="button" class="btn btn-default close-modal-button">Close</button>
+        </div>
       </div>
     </div>
   </div>
