--- a/client/views/app/stocktake/order-receive/list/invoice/order-receive-list-invoice.html
+++ b/client/views/app/stocktake/order-receive/list/invoice/order-receive-list-invoice.html
@@ -1,9 +1,9 @@
 <template name="invoiceImage">
   <div id="links">
-    {{#each imageUrl}}
+    {{#if imageUrl}}
       <a href="{{this.originalUrl}}" target='blank' title="Invoice">
         <img src="{{this.convertedUrl}}" class="col-md-4 no-padding img-responsive">
       </a>
-    {{/each}}
+    {{/if}}
   </div>
 </template>
