--- a/client/views/app/stocktake/order-receive/list/temperature/temperature.html
+++ b/client/views/app/stocktake/order-receive/list/temperature/temperature.html
@@ -12,13 +12,13 @@
           <div class="col-md-10">
             <p class="text-center">Do you want to add the current temperature?</p>
 
-            <form class="form-horizontal" id="temperatureForm">
+            <form class="form-horizontal temperature-form">
               <div class="form-group">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                   <div class="input-group m-b">
                     <div class="input-group-addon"><img src="/images/celsius.png" width="18 px"/></div>
-                    <input name="temperature" class="form-control text-right font-20"/>
+                    <input class="form-control text-right font-20 temperature-input"/>
                   </div>
                 </div>
               </div>
