--- a/client/views/app/navigations/heading/area-chooser/area-chooser.html
+++ b/client/views/app/navigations/heading/area-chooser/area-chooser.html
@@ -1,30 +1,33 @@
 <template name="areaChooser">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <form>
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+  <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <button type="button" class="close close-modal-button" aria-label="Close"><span
               aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Choose area</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <select name="areaId" class="form-control">
-              {{#each areas}}
-                {{#if equal _id getCurrentAreaId}}
-                  <option value="{{_id}}" selected="selected">{{name}}</option>
-                {{else}}
-                  <option value="{{_id}}">{{name}}</option>
-                {{/if}}
-              {{/each}}
-            </select>
+            <h4 class="modal-title">Choose area</h4>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">OK</button>
-        </div>
-      </form>
+          <div class="modal-body">
+            <div class="form-group">
+              <select name="areaId" class="form-control">
+                {{#each areas}}
+                  {{#if equal _id getCurrentAreaId}}
+                    <option value="{{_id}}" selected="selected">{{name}}</option>
+                  {{else}}
+                    <option value="{{_id}}">{{name}}</option>
+                  {{/if}}
+                {{/each}}
+              </select>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Copy</button>
+            <button type="button" class="btn btn-default close-modal-button">Close</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </template>
