Small refactoring in stockTakeMasterList

--- a/client/views/app/stocktake/main-list-view/items-list/stocktake-master-list.html
+++ b/client/views/app/stocktake/main-list-view/items-list/stocktake-master-list.html
@@ -11,9 +11,9 @@
               <th>Action</th>
             </tr>
             </thead>
-            {{#if listOfDates}}
+            {{#if stocktakes}}
               <tbody>
-              {{#each listOfDates}}
+              {{#each stocktakes}}
                 {{> stocktakeItem item=this}}
               {{/each}}
               </tbody>
